# llvm-project

./: .gitignore  BUILD.bazel  MODULE.bazel  flake.nix  vars.bzl
bolt/: targets.bzl
clang/: BUILD.bazel
libc/: BUILD.bazel
lld/: BUILD.bazel
lldb/: BUILD.bazel
lldb/source/Plugins/: BUILD.bazel
llvm/: BUILD.bazel  targets.bzl
llvm/include/llvm/ADT/: DenseMap.h  bit.h
llvm/include/llvm/Support/: MathExtras.h  TrailingObjects.h
llvm/lib/Support/Unix/: Path.inc
mlir/: BUILD.bazel
openmp/: BUILD
openmp/runtime/tools/: BUILD
